--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential cmake libgtest-dev libgmock-dev
         
-        # Install ROS2 Humble dependencies (optional)
+        # Install ROS2 Humble dependencies
         sudo apt-get install -y software-properties-common
         sudo add-apt-repository universe
         sudo apt-get update && sudo apt-get install -y curl gnupg2 lsb-release
@@ -31,6 +31,7 @@ jobs:
       run: |
         mkdir build-ros2
         cd build-ros2
+        source /opt/ros/humble/setup.bash
         cmake .. -DCMAKE_BUILD_TYPE=Release -DUSE_ROS2_MESSAGES=ON
         make -j$(nproc)
 
@@ -44,6 +45,7 @@ jobs:
     - name: Build examples
       run: |
         cd build-ros2
+        source /opt/ros/humble/setup.bash
         make basic_interpolation_example
         cd ../build-no-ros2
         make basic_interpolation_example
@@ -51,6 +53,7 @@ jobs:
     - name: Build tests (skip execution)
       run: |
         cd build-ros2
+        source /opt/ros/humble/setup.bash
         make -j$(nproc)
         echo "Tests built successfully (not executed due to CI environment)"
         cd ../build-no-ros2
