fix: 只有在GTest可用时才添加测试

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,8 @@ jobs:
 
     - name: Create release package
       run: |
+        pwd
+        ls -la
         chmod +x create_release_package.sh
         ./create_release_package.sh
 
